[package]
name = "rust-redis-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
gethostname = "0.4.3"
hyper = { version = "0.14.27", features = ["full"] }
redis = "0.23.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "^1.34.0", features = ["full"] }
uuid = "1.5.0"

[dev-dependencies]
mockito = "1.2.0"
tokio-test = "0.4.3"
serial_test = "2.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
